--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,11 +34,16 @@ spring:
     init:
       mode: ${DATABASE_INIT:always}
       schema-locations: "classpath:database-init.sql"
+  cache:
+    caffeine:
+      spec: expireAfterWrite=1m
+
+
 
 
 logging:
   level:
     org.apache.coyote.http11.Http11InputBuffer: TRACE # Incoming http requests
     com.laioffer.twitch.external.TwitchApiClient: DEBUG
+    org.springframework.jdbc.core: DEBUG # SQL
     org.springframework.jdbc.datasource.init: DEBUG
-
